--- a/game/src/App.css
+++ b/game/src/App.css
@@ -4,15 +4,15 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: black;
+	background: rgb(15, 19, 23);
 	font-family: "VT323", monospace;
 	font-weight: 400;
 	font-style: normal;
 }
-#selectalias {
-	font-family: "VT323", monospace;
-	font-weight: 400;
-	font-style: normal;
+#selectalias,
+#intro,
+.start {
+	font-family: "Gajraj One";
 	text-align: center;
 	background: black;
 	color: white !important;
@@ -26,7 +26,26 @@
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
+	z-index: 1002;
+}
+
+#selectalias {
+	margin-top: 4rem;
+	position: relative;
+	transform: none;
+	left: 0;
+	top: 0;
+}
+.start {
 	z-index: 1001;
+	padding: 1rem 4rem;
+}
+.start:hover {
+	cursor: pointer;
+	color: black !important;
+	outline-color: yellow;
+	background: yellow;
+	box-shadow: 0 0 4rem 0 yellow;
 }
 #darkoverlay {
 	position: fixed;
@@ -36,33 +55,360 @@
 	top: 0;
 	left: 0;
 	content: "";
-	backdrop-filter: blur(2rem);
-	background: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(1rem);
+	background: rgba(0, 0, 0, 0.4);
 }
 #container {
-	outline: 2px solid black;
+	outline: 8px solid rgba(255, 255, 255, 0.05);
+	border-style: inset;
+	border-color: rgba(255, 255, 255, 0.2);
+	border-width: 6px;
+	background: rgba(0, 0, 0, 0.4);
 	position: relative;
 	max-width: 30rem;
-	margin-right: 25vh;
 	width: 50vh;
+	z-index: 100;
+	animation: boxflash 0.1s infinite;
+}
+
+#intro {
+	animation: boxflash 0.1s infinite;
+	background: linear-gradient(0deg, rgba(9, 37, 62, 1) 0%, rgba(22, 60, 116, 1) 100%);
+	outline: none;
+	border: 4px solid royalblue;
+	border-radius: 0.8rem;
+}
+
+@keyframes boxflash {
+	0% {
+		box-shadow: 0 0 64px 0 rgba(82, 157, 255, 0.6);
+	}
+	100% {
+		box-shadow: 0 0 58px 0 rgba(82, 157, 255, 0.5);
+	}
+}
+
+@keyframes boxflashsmall {
+	0% {
+		box-shadow: 0 0 16px 0 rgba(82, 157, 255, 0.6);
+	}
+	100% {
+		box-shadow: 0 0 12px 0 rgba(82, 157, 255, 0.5);
+	}
+}
+
+#intro h1 {
+	font-size: 10rem;
+}
+
+@keyframes bg-shift {
+	0% {
+		background-position: 0 -25px;
+	}
+	100% {
+		background-position: 0 25px;
+	}
+}
+
+#intro h1 span,
+#container h1 span {
+	filter: drop-shadow(0 0 1px white) drop-shadow(0 0 1px white) drop-shadow(0px 0.5rem 0px black)
+		drop-shadow(0px 12px 24px black) drop-shadow(1px 1px 1px magenta);
+}
+#container h1 {
+	font-family: "Gajraj One";
+	position: absolute;
+	text-align: center;
+	font-size: clamp(1.2rem, 8vh, 5rem);
+	top: -5rem;
+	width: 100%;
+}
+
+#intro h1 span:nth-child(1),
+#container h1 span:nth-child(1) {
+	background: linear-gradient(
+		0deg,
+		rgb(86, 0, 0) 16%,
+		rgb(255, 37, 37) 37%,
+		rgb(255, 185, 185) 51%,
+		rgb(255, 37, 37) 66%,
+		rgb(33, 0, 0) 100%
+	);
+	color: transparent;
+	background-size: contain;
+	-webkit-background-clip: text;
+	background-clip: text;
+
+	animation: bg-shift 0.5s ease-in-out infinite alternate;
+}
+#intro h1 span:nth-child(2),
+#container h1 span:nth-child(2) {
+	background: linear-gradient(
+		0deg,
+		rgb(86, 80, 0) 16%,
+		rgb(255, 153, 37) 37%,
+		rgb(255, 237, 185) 51%,
+		rgb(255, 150, 37) 66%,
+		rgb(33, 26, 0) 100%
+	);
+	color: transparent;
+	background-size: contain;
+	-webkit-background-clip: text;
+	background-clip: text;
+	animation: bg-shift 0.5s ease-in-out infinite alternate;
+}
+#intro h1 span:nth-child(3),
+#container h1 span:nth-child(3) {
+	background: linear-gradient(
+		0deg,
+		rgb(73, 86, 0) 16%,
+		rgb(204, 255, 37) 37%,
+		rgb(241, 255, 185) 51%,
+		rgb(179, 255, 37) 66%,
+		rgb(24, 33, 0) 100%
+	);
+	color: transparent;
+	background-size: contain;
+	-webkit-background-clip: text;
+	background-clip: text;
+	animation: bg-shift 0.5s ease-in-out infinite alternate;
+}
+#intro h1 span:nth-child(4),
+#container h1 span:nth-child(4) {
+	background: linear-gradient(
+		0deg,
+		rgb(0, 86, 20) 16%,
+		rgb(37, 255, 44) 37%,
+		rgb(192, 255, 185) 51%,
+		rgb(37, 255, 77) 66%,
+		rgb(5, 33, 0) 100%
+	);
+	color: transparent;
+	background-size: contain;
+	-webkit-background-clip: text;
+	background-clip: text;
+	animation: bg-shift 0.5s ease-in-out infinite alternate;
+}
+#intro h1 span:nth-child(5),
+#container h1 span:nth-child(5) {
+	background: linear-gradient(
+		0deg,
+		rgb(0, 74, 86) 16%,
+		rgb(37, 208, 255) 37%,
+		rgb(185, 242, 255) 51%,
+		rgb(37, 215, 255) 66%,
+		rgb(0, 23, 33) 100%
+	);
+	color: transparent;
+	background-size: contain;
+	-webkit-background-clip: text;
+	background-clip: text;
+	animation: bg-shift 0.5s ease-in-out infinite alternate;
+}
+#intro h1 span:nth-child(6),
+#container h1 span:nth-child(6) {
+	background: linear-gradient(
+		0deg,
+		rgb(0, 20, 86) 16%,
+		rgb(37, 95, 255) 37%,
+		rgb(185, 211, 255) 51%,
+		rgb(37, 121, 255) 66%,
+		rgb(0, 14, 33) 100%
+	);
+	color: transparent;
+	background-size: contain;
+	-webkit-background-clip: text;
+	background-clip: text;
+	animation: bg-shift 0.5s ease-in-out infinite alternate;
+}
+.colorize {
+	background-color: rgb(103, 103, 255);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 20;
+	mix-blend-mode: overlay;
+	opacity: 0.8;
 }
 .grid {
 	max-width: 100%;
 	display: grid;
-	gap: 1px;
 	grid-template-columns: repeat(12, 1fr);
 }
 
 .grid div {
+	border: 1px solid rgba(255, 255, 255, 0.08);
 	aspect-ratio: 1/1;
 	width: 100%;
-	background: rgb(44, 44, 44);
 }
 
 .gamesymbols {
+	font-family: "Gajraj One";
 	font-size: 2rem;
 	position: absolute;
 	color: white;
-	left: calc(50% + 16vh);
-	top: 10vh;
+	right: calc(50% + 28vh + 10px);
+	top: 8vh;
+	text-align: right;
+	animation: textflash 0.1s infinite;
+	z-index: 100;
+}
+
+@keyframes textflash {
+	0% {
+		filter: drop-shadow(0 0 6px white);
+	}
+	100% {
+		filter: drop-shadow(0 0 2px white);
+	}
+}
+
+.score,
+.level span,
+.lines span {
+	font-size: 8vh;
+	filter: drop-shadow(0 0 2px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black)
+		drop-shadow(0 0 1px yellow) drop-shadow(0 0 1px yellow) drop-shadow(0 0 1px yellow);
+}
+
+.lines,
+.level {
+	width: 100%;
+	font-size: 1.2rem;
+	font-family: "Gajraj One";
+	padding: 3vh;
+	margin-top: 1rem;
+	text-align: center;
+	outline: 4px solid rgba(255, 255, 255, 0.08);
+	border-color: rgba(255, 255, 255, 0.4);
+}
+
+.lines {
+	margin-top: 10vh;
+}
+
+.lines span,
+.level span {
+	display: block;
+	text-align: center;
+}
+
+.tetranome {
+	background: white;
+	box-shadow: 0 0 12px 0 white;
+}
+
+#backanim {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	content: "";
+	top: 0;
+	left: 0;
+	z-index: 50;
+}
+
+#backanim i {
+	width: 8px;
+	height: 8px;
+	box-shadow: 0 0 8px 1px yellow;
+	border-radius: 12px;
+	background: yellow;
+	position: absolute;
+	top: -10%;
+	left: -10%;
+	z-index: 8;
+}
+
+#backanim i:nth-child(1) {
+	animation: i1 18s ease-out infinite;
+}
+
+#backanim i:nth-child(2) {
+	animation: i2 14s ease-out infinite;
+	animation-delay: 5s;
+}
+
+#backanim i:nth-child(3) {
+	animation: i3 10s ease-out infinite;
+	animation-delay: 12s;
+}
+
+#backanim i:nth-child(4) {
+	animation: i4 20s ease-out infinite;
+	animation-delay: 20s;
+}
+
+@keyframes i1 {
+	0% {
+		scale: 2;
+		top: -20px;
+		right: -20px;
+	}
+	5% {
+		scale: 0;
+		top: 50%;
+		right: 50%;
+	}
+	100% {
+		scale: 0;
+		top: 50%;
+		right: 50%;
+	}
+}
+
+@keyframes i2 {
+	0% {
+		scale: 2;
+		top: -20px;
+		left: -20px;
+	}
+	5% {
+		scale: 0;
+		top: 50%;
+		left: 50%;
+	}
+	100% {
+		scale: 0;
+		top: 50%;
+		left: 50%;
+	}
+}
+
+@keyframes i3 {
+	0% {
+		scale: 2;
+		top: -20px;
+		left: 40%;
+	}
+	5% {
+		scale: 0;
+		top: 60%;
+		left: 50%;
+	}
+	100% {
+		scale: 0;
+		top: 60%;
+		left: 50%;
+	}
+}
+
+@keyframes i4 {
+	0% {
+		scale: 2;
+		top: 110%;
+		left: 20%;
+	}
+	5% {
+		scale: 0;
+		top: 60%;
+		left: 50%;
+	}
+	100% {
+		scale: 0;
+		top: 60%;
+		left: 50%;
+	}
 }
