--- a/game/src/App.css
+++ b/game/src/App.css
@@ -9,6 +9,15 @@
 	font-weight: 400;
 	font-style: normal;
 }
+
+#gamecontainer {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 #selectalias,
 #intro,
 .start {
@@ -65,8 +74,9 @@
 	border-width: 6px;
 	background: rgba(0, 0, 0, 0.4);
 	position: relative;
-	max-width: 30rem;
-	width: 50vh;
+	max-width: 32rem;
+	margin-top: 3rem;
+	width: 52vh;
 	z-index: 100;
 	animation: boxflash 0.1s infinite;
 }
@@ -343,7 +353,8 @@
 	text-align: center;
 }
 
-.tetranome {
+.tetromino {
+	border: 1px solid rgba(0, 0, 0, 0.1) !important;
 	background: white;
 	box-shadow: 0 0 12px 0 white;
 }
@@ -513,4 +524,25 @@
 	filter: none;
 	opacity: 1;
 	mix-blend-mode: normal;
+}
+
+.addscore {
+	transform-origin: right center;
+	animation: scoreadd 0.3s ease-in-out 1 forwards;
+}
+
+@keyframes scoreadd {
+	0% {
+		color: yellow;
+		scale: 1.5;
+	}
+	100% {
+		color: white;
+		scale: 1;
+	}
+}
+
+.lastrow {
+	height: 0 !important;
+	aspect-ratio: auto;
 }
