--- a/game/src/App.css
+++ b/game/src/App.css
@@ -29,7 +29,6 @@
 	font-size: 3rem;
 	font-weight: bold;
 	outline: 4px solid white;
-	border-radius: 0.4rem;
 	padding: 1rem;
 	position: absolute;
 	top: 50%;
@@ -53,6 +52,9 @@
 	top: 0;
 }
 .start {
+	border-radius: none;
+	text-transform: uppercase;
+	text-decoration: none;
 	z-index: 1001;
 	padding: 1rem 4rem;
 }
@@ -270,7 +272,7 @@
 	top: 0;
 	content: "";
 	display: block;
-	mix-blend-mode: screenr;
+	mix-blend-mode: screen;
 	background-image: url("assets/zoom.gif");
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -376,6 +378,7 @@
 	content: "";
 	z-index: -1;
 	opacity: 1;
+	opacity: 0.5;
 }
 
 @keyframes comingsymbol {
