--- a/game/src/App.css
+++ b/game/src/App.css
@@ -222,6 +222,7 @@
 		drop-shadow(0px 12px 24px black) drop-shadow(1px 1px 1px magenta);
 }
 #container h1 {
+	z-index: 10;
 	font-family: "Gajraj One";
 	position: absolute;
 	text-align: center;
@@ -687,6 +688,44 @@
 	}
 	100% {
 		transform: translateY(0rem);
+	}
+}
+
+.newscore {
+	z-index: 1000;
+	position: fixed;
+	left: 50%;
+	top: 80%;
+	transform: translateX(-50%) translateY(-50%);
+	color: white;
+	font-size: 2rem;
+	line-height: 2rem;
+	font-family: "Gajraj One";
+	text-align: center;
+	animation: newscore 0.8s ease-out 1 forwards;
+	filter: drop-shadow(0 0 1px yellow) drop-shadow(0 0 4px yellow) drop-shadow(0 0 2rem yellow)
+		drop-shadow(0 0 2rem yellow);
+	transform-origin: top left;
+}
+@keyframes newscore {
+	0% {
+		opacity: 1;
+		top: 80%;
+		scale: 0.5;
+		color: yellow;
+	}
+	30% {
+		color: white;
+	}
+	70% {
+		scale: 1.5;
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		top: 60%;
+		scale: 1.5;
+		color: white;
 	}
 }
 
