--- a/game/src/App.css
+++ b/game/src/App.css
@@ -59,6 +59,16 @@
 	box-shadow: none !important;
 }
 
+#intro p {
+	margin-top: 3rem;
+	font-family: "VT323", monospace;
+	font-size: 1.5rem;
+	max-width: 35rem;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .playbox {
 	background: rgba(0, 0, 0, 0.35);
 	outline: 4px solid white;
@@ -205,6 +215,16 @@
 
 #intro h1 {
 	font-size: 10rem;
+}
+
+#intro h2 {
+	margin-top: -6rem;
+	z-index: 10000;
+	position: relative;
+	filter: drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black)
+		drop-shadow(0px 0px 1px black);
+	transform: skew(-10deg, -10deg);
+	letter-spacing: 0.2rem;
 }
 
 @keyframes bg-shift {
@@ -478,6 +498,11 @@
 
 .tetromino {
 	border: 1px solid rgba(0, 0, 0, 0.1) !important;
+	border-width: 4px !important;
+	border-style: solid;
+	border-top-color: rgba(255, 255, 255, 0.2) !important;
+	border-left-color: rgba(255, 255, 255, 0.1) !important;
+	border-bottom-color: rgba(0, 0, 0, 0.1) !important;
 	background: white;
 	box-shadow: 0 0 64px 0 white;
 }
@@ -810,6 +835,11 @@
 }
 
 .border {
+	border-width: 4px !important;
+	border-style: solid;
+	border-top-color: rgba(255, 255, 255, 0.2) !important;
+	border-left-color: rgba(255, 255, 255, 0.1) !important;
+	border-bottom-color: rgba(0, 0, 0, 0.1) !important;
 	background: rgba(65, 105, 225, 0.186);
 }
 /*
