--- a/game/src/App.css
+++ b/game/src/App.css
@@ -669,13 +669,23 @@
 }
 
 #highscores {
-	margin-top: 2rem;
+	margin-top: 1rem;
 	align-items: center;
 	justify-items: center;
-	height: calc(90vh - 22rem);
+}
+
+#highscores .highscoretable {
+	height: calc(90vh - 27rem);
 	overflow-y: scroll;
 	scrollbar-width: thin;
 	scrollbar-color: white transparent;
+}
+
+#highscores p {
+	filter: drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black)
+		drop-shadow(0 0 1px black);
+	font-size: 1.2rem;
+	margin-bottom: 1rem;
 }
 
 #highscores .row {
@@ -685,7 +695,7 @@
 	max-width: 960px;
 	grid-gap: 2rem;
 	display: grid;
-	grid-template-columns: 1fr 3fr 4fr 2fr 3fr 1fr 1fr 3fr 4fr;
+	grid-template-columns: 1fr 3fr 4fr 2fr 3fr 3fr 4fr;
 	border-radius: 0.4rem;
 }
 
@@ -702,7 +712,7 @@
 }
 #highscores .row div:nth-child(1),
 #highscores .row div:nth-child(2),
-#highscores .row div:nth-child(9) {
+#highscores .row div:nth-child(7) {
 	text-align: left;
 }
 #highscores .row div:nth-child(1),
@@ -712,7 +722,7 @@
 
 #highscores .row div:nth-child(3),
 #highscores .row div:nth-child(5),
-#highscores .row div:nth-child(8) {
+#highscores .row div:nth-child(6) {
 	text-align: right;
 }
 #highscores .row {
@@ -722,6 +732,7 @@
 		drop-shadow(0 0 1px black);
 }
 #highscores .thead {
+	text-transform: uppercase;
 	font-size: 1rem;
 	border-bottom: 1px solid rgba(255, 255, 0, 0.549);
 	margin-bottom: 0.5rem;
