--- a/game/src/App.css
+++ b/game/src/App.css
@@ -704,7 +704,7 @@
 	max-width: 960px;
 	grid-gap: 2rem;
 	display: grid;
-	grid-template-columns: 1fr 3fr 4fr 2fr 3fr 3fr 4fr;
+	grid-template-columns: 1fr 3fr 4fr 2fr 3fr 3fr;
 	border-radius: 0.4rem;
 }
 
@@ -712,8 +712,7 @@
 	border-bottom: 1px solid rgba(255, 255, 0, 0.549);
 	padding: 0.5rem;
 	border-radius: 0 !important;
-	margin-bottom: 0.5rem;
-	padding-bottom: 0.9rem !important;
+	padding-bottom: 1rem !important;
 }
 
 #highscores .row a {
