--- a/game/src/App.css
+++ b/game/src/App.css
@@ -591,7 +591,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgba(6, 17, 64, 0.532);
+	background: rgba(0, 0, 0, 0.532);
 	color: white;
 	position: fixed;
 	left: 50%;
@@ -1185,6 +1185,11 @@
 }
 .tetromino.taken {
 	animation: takenstart 0.2s ease-out 1 forwards;
+}
+
+.newplace {
+	box-shadow: 0 0 1rem 1px rgba(255, 255, 255, 0.3) inset !important;
+	border: 1px solid rgba(255, 255, 255, 0.3) !important;
 }
 
 @keyframes takenstart {
