--- a/game/src/App.css
+++ b/game/src/App.css
@@ -1248,3 +1248,219 @@
 		filter: brightness(1);
 	}
 }
+
+.level {
+	margin-top: -4rem;
+}
+
+#leftcontrols,
+#rightcontrols {
+	display: none;
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+	#container {
+		max-width: 48rem;
+		margin-top: 3rem;
+		margin-right: 14rem;
+		width: 51vh;
+	}
+
+	.gamesymbols {
+		top: 50%;
+		transform: translateY(-50%);
+		width: 12rem;
+		right: 2rem;
+	}
+
+	.alias,
+	.score,
+	#timer {
+		text-align: left !important;
+	}
+
+	.comingsymbol {
+		top: 36%;
+
+		right: 2rem;
+	}
+
+	.addscore {
+		transform-origin: left center;
+	}
+
+	.lines {
+		margin-top: 26rem;
+	}
+
+	.multiplier {
+		top: 23rem;
+		width: 13.5rem;
+	}
+
+	#selectalias {
+		width: 70vw;
+	}
+
+	.banner {
+		bottom: 6rem;
+	}
+
+	#intro {
+		top: 30%;
+	}
+
+	#backanim i:nth-child(6) {
+		bottom: -20rem;
+		left: -20rem;
+		opacity: 1;
+		filter: brightness(0.4);
+	}
+}
+
+@media (hover: none) {
+	#rightcontrols {
+		position: fixed;
+		bottom: 3rem;
+		right: 3rem;
+		display: grid;
+		width: 13rem;
+		height: 13rem;
+		z-index: 1000;
+	}
+
+	#a-button,
+	#b-button,
+	#z-button {
+		font-family: "Gajraj One", sans-serif;
+		font-size: 2rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		color: black;
+		position: absolute;
+		background: rgba(255, 255, 255, 0.3);
+		width: 5rem;
+		height: 5rem;
+		border-radius: 100%;
+	}
+
+	#a-button {
+		right: 0;
+		bottom: 6rem;
+	}
+
+	#z-button {
+		right: 0;
+		bottom: 14rem;
+	}
+
+	#b-button {
+		right: 5rem;
+		bottom: 0rem;
+	}
+
+	#leftcontrols {
+		position: fixed;
+		bottom: 2rem;
+		left: 3rem;
+		display: grid;
+		width: 13rem;
+		height: 13rem;
+		z-index: 1000;
+	}
+	#uparrow {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		top: 0;
+		width: 3rem;
+		height: 5rem;
+		background: rgba(255, 255, 255, 0.3);
+	}
+	#downarrow {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		bottom: 0;
+		width: 3rem;
+		height: 5rem;
+		background: rgba(255, 255, 255, 0.3);
+	}
+
+	#leftarrow {
+		position: absolute;
+		left: 0;
+		transform: translateY(-50%);
+		top: 50%;
+		width: 5rem;
+		height: 3rem;
+		background: rgba(255, 255, 255, 0.3);
+	}
+	#rightarrow {
+		position: absolute;
+		right: 0;
+		transform: translateY(-50%);
+		top: 50%;
+		width: 5rem;
+		height: 3rem;
+		background: rgba(255, 255, 255, 0.3);
+	}
+
+	#a-button:active,
+	#a-button:focus-visible,
+	#b-button:active,
+	#b-button:focus-visible,
+	#z-button:active,
+	#z-button:focus-visible,
+	#uparrow:active,
+	#uparrow:focus-visible,
+	#downarrow:active,
+	#downarrow:focus-visible,
+	#leftarrow:active,
+	#leftarrow:focus-visible,
+	#rightarrow:active,
+	#rightarrow:focus-visible {
+		background: white;
+	}
+
+	#rightarrow:after,
+	#leftarrow:after,
+	#uparrow:after,
+	#downarrow:after {
+		display: block;
+		content: "";
+		width: 100%;
+		height: 100%;
+	}
+
+	#rightarrow:after {
+		background-image: url("assets/icon-back.svg");
+		background-size: 3rem;
+		background-repeat: no-repeat;
+		background-position: center center;
+		rotate: 180deg;
+	}
+
+	#leftarrow:after {
+		background-image: url("assets/icon-back.svg");
+		background-size: 3rem;
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+
+	#uparrow:after {
+		background-image: url("assets/icon-back.svg");
+		background-size: 3rem;
+		background-repeat: no-repeat;
+		background-position: center center;
+		rotate: 90deg;
+	}
+	#downarrow:after {
+		background-image: url("assets/icon-back.svg");
+		background-size: 3rem;
+		background-repeat: no-repeat;
+		background-position: center center;
+		rotate: -90deg;
+	}
+}
