--- a/game/src/css/stars.css
+++ b/game/src/css/stars.css
@@ -84,13 +84,13 @@ https://mkrtchyan.ga
 }
 
 #stars {
-	background: #000000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top
+	background: #000000 url(https://www.script-tutorials.com/demos/360/images/stars.png) repeat top
 		center;
 	z-index: 0;
 }
 
 #twinkling {
-	background: transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png)
+	background: transparent url(https://www.script-tutorials.com/demos/360/images/twinkling.png)
 		repeat top center;
 	z-index: 1;
 
@@ -103,8 +103,8 @@ https://mkrtchyan.ga
 
 #clouds {
 	opacity: 0.5;
-	background: transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat
-		top center;
+	background: transparent url(https://www.script-tutorials.com/demos/360/images/clouds3.png)
+		repeat top center;
 	z-index: 3;
 	filter: brightness(3.5);
 	mix-blend-mode: screen;
