--- a/game/src/App.css
+++ b/game/src/App.css
@@ -4,10 +4,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgb(15, 19, 23);
+	background: black;
 	font-family: "VT323", monospace;
 	font-weight: 400;
 	font-style: normal;
+}
+#root:after,
+#root:before {
+	display: none;
 }
 
 #gamecontainer {
@@ -35,6 +39,10 @@
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	z-index: 1002;
+}
+
+#intro {
+	top: 40%;
 }
 
 .start {
@@ -128,7 +136,7 @@
 
 #selectalias {
 	max-width: 90vw;
-	margin-top: 4rem;
+	margin-top: 0rem;
 	position: relative;
 	transform: none;
 	left: 0;
@@ -194,6 +202,7 @@
 	outline: none;
 	border: 4px solid royalblue;
 	border-radius: 0.8rem;
+	max-width: 100%;
 }
 
 @keyframes boxflash {
@@ -214,8 +223,35 @@
 	}
 }
 
-#intro h1 {
+#intro h1,
+#container h1 {
+	background-image: url("src/assets/tetrislogo.png");
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 640px;
+	aspect-ratio: 4/3;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 	font-size: 10rem;
+}
+
+#gamecontainer #container h1 {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 15rem !important;
+	aspect-ratio: 4/3;
+	top: -6.5rem !important;
+	background-size: contain;
+}
+
+#gamecontainer #container h1 span {
+	display: none;
+}
+
+#intro h1 span {
+	display: none;
 }
 
 #intro h2 {
@@ -446,12 +482,16 @@
 
 #timer div span {
 	display: inline-block;
-	width: 0.85rem;
+	width: 2.1rem;
 }
 
 #btn-mute,
 #btn-fullscreen,
-#btn-back {
+#btn-back,
+#btn-credits,
+#btn-like,
+#btn-controls,
+#btn-credits {
 	position: fixed;
 	top: 1rem;
 	right: 1rem;
@@ -478,9 +518,46 @@
 	background-image: url("assets/icon-back.svg");
 }
 
+#btn-like {
+	top: 5rem;
+	right: 1rem;
+	background-size: 1.5rem;
+	background-image: url("assets/icon-love.svg");
+	background-position: center 0.7rem;
+	height: 5rem;
+}
+
+#btn-like span {
+	padding-top: 2.8rem;
+	width: 100%;
+	height: 100%;
+	display: block;
+	text-align: center;
+	font-weight: bold;
+	font-size: 1.5rem;
+	pointer-events: none;
+}
+
+#btn-controls {
+	top: 11rem;
+	right: 1rem;
+
+	background-image: url("assets/icon-controls.svg");
+}
+
+#btn-credits {
+	top: 15rem;
+	right: 1rem;
+	background-image: url("assets/icon-info.svg");
+}
+
 #btn-mute:hover,
 #btn-fullscreen:hover,
-#btn-back:hover {
+#btn-back:hover,
+#btn-like:hover,
+#btn-credits:hover,
+#btn-controls:hover,
+#btn-credits:hover {
 	cursor: pointer;
 	scale: 1.2;
 	background-color: yellow;
@@ -490,10 +567,121 @@
 
 #btn-mute:active,
 #btn-fullscreen:active,
-#btn-back:active {
+#btn-back:active,
+#btn-like:active,
+#btn-credits:active,
+#btn-controls:active,
+#btn-credits:active {
 	scale: 1;
 }
 
+#credits-container,
+#controls-container {
+	display: none;
+	width: 40rem;
+	max-width: 98%;
+	font-family: "Robot", sans-serif;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	z-index: 50000;
+	background: white;
+	padding: 2rem;
+	transform: translateX(-50%) translateY(-50%);
+	box-shadow: 0 0.8rem 1.2rem 3px rgba(0, 0, 0, 0.7);
+}
+
+#credits-container #btn-closecredit,
+#controls-container #btn-closecontrols {
+	width: 3rem;
+	height: 3rem;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+
+	background-image: url("src/assets/icon-close.svg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 2rem;
+	border: 2px solid black;
+}
+
+#credits-container #btn-closecredit:hover,
+#controls-container #btn-closecontrols:hover {
+	scale: 1.05;
+	cursor: pointer;
+	background-color: yellow;
+	border-color: yellow;
+}
+
+#credit-container p {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+
+#credits-container h3 {
+	font-size: 2rem;
+}
+#credits-container h3 span {
+	font-size: 1rem;
+}
+
+#credits-container .created {
+	font-size: 0.8rem;
+	color: gray;
+	display: block;
+	margin-bottom: 0.5rem;
+}
+
+#credits-container .website,
+#credits-container .likes,
+#credits-container .plays {
+	background: black;
+	color: white;
+	padding: 0.5rem;
+	display: inline-block;
+	clear: both;
+	margin-right: 0.2rem;
+}
+#credits-container .website:hover {
+	color: yellow !important;
+}
+
+#credits-container .small {
+	margin-top: 0.5rem;
+	color: gray;
+	font-size: 0.9rem;
+}
+.controlsgrid {
+	margin-top: 1rem;
+	color: white;
+	gap: 1px;
+	display: grid;
+	grid-template-columns: 2fr 2fr 6fr;
+}
+.controlsgrid div {
+	background: black;
+	padding: 0.7rem 1rem;
+}
+.controlsgrid .keyname {
+	font-size: 0.9rem;
+	text-align: center;
+	color: yellow;
+	font-weight: rgb(48, 48, 48);
+}
+.controlsgrid .description {
+	color: white;
+	background: rgb(51, 51, 51);
+}
+
+.liked {
+	background-color: white;
+	filter: invert(0) !important;
+	border-color: white !important;
+}
+.liked:hover {
+	border-color: yellow !important;
+}
 .lines,
 .level,
 .comingsymbol {
@@ -506,13 +694,14 @@
 	text-align: center;
 	/* outline: 4px solid rgba(255, 255, 255, 0.08); */
 	border-color: rgba(255, 255, 255, 0.4);
+	z-index: 10;
 }
 .comingsymbol {
 	width: auto;
 	position: absolute;
 	right: calc(50% - 28vh - 12.5rem);
 	color: white;
-	z-index: 10;
+	z-index: 100;
 	overflow: visible;
 	padding: 1rem;
 	animation: textflash 0.561s infinite;
@@ -1100,19 +1289,14 @@
 	border-bottom-color: rgba(0, 0, 0, 0.1) !important;
 	background: rgba(65, 105, 225, 0.186);
 }
-/*
-.lastrow {
-	height: 0 !important;
-	aspect-ratio: auto;
-}
-*/
+
 .copyright {
 	position: absolute;
 	bottom: 0.75rem;
 	left: 50%;
 	color: white;
 	transform: translateX(-50%);
-	z-index: 50;
+	z-index: 1001;
 	font-size: 0.75rem;
 	font-family: "Roboto", sans-serif;
 	opacity: 0.5;
@@ -1237,7 +1421,7 @@
 	z-index: 10000;
 	left: 50%;
 	position: absolute;
-	bottom: 2rem;
+	bottom: 4rem;
 	transform: translateX(-50%);
 }
 
@@ -1263,6 +1447,158 @@
 	display: none;
 }
 
+#loader {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 100000;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+	width: 50px;
+	padding: 8px;
+	aspect-ratio: 1;
+	border-radius: 50%;
+	background: #25b09b;
+	--_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+	-webkit-mask: var(--_m);
+	mask: var(--_m);
+	-webkit-mask-composite: source-out;
+	mask-composite: subtract;
+	animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+	to {
+		transform: rotate(1turn);
+	}
+}
+
+/* STARS AND CLOUDS MADE BY: */
+/* ============================================================================================== 
+SED Innovations
+https://sed.am
+https://mkrtchyan.ga
+================================================================================================= */
+
+@keyframes move-twink-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: -10000px 5000px;
+	}
+}
+@-webkit-keyframes move-twink-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: -10000px 5000px;
+	}
+}
+@-moz-keyframes move-twink-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: -10000px 5000px;
+	}
+}
+@-ms-keyframes move-twink-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: -10000px 5000px;
+	}
+}
+
+@keyframes move-clouds-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: 10000px 0;
+	}
+}
+@-webkit-keyframes move-clouds-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: 10000px 0;
+	}
+}
+@-moz-keyframes move-clouds-back {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: 10000px 0;
+	}
+}
+@-ms-keyframes move-clouds-back {
+	from {
+		background-position: 0;
+	}
+	to {
+		background-position: 10000px 0;
+	}
+}
+
+#stars,
+#twinkling,
+#clouds {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+
+#stars {
+	background: #000000 url(https://www.script-tutorials.com/demos/360/images/stars.png) repeat top
+		center;
+	z-index: 0;
+}
+
+#twinkling {
+	background: transparent url(https://www.script-tutorials.com/demos/360/images/twinkling.png)
+		repeat top center;
+	z-index: 1;
+
+	-moz-animation: move-twink-back 200s linear infinite;
+	-ms-animation: move-twink-back 200s linear infinite;
+	-o-animation: move-twink-back 200s linear infinite;
+	-webkit-animation: move-twink-back 200s linear infinite;
+	animation: move-twink-back 200s linear infinite;
+}
+
+#clouds {
+	opacity: 0.5;
+	background: transparent url(https://www.script-tutorials.com/demos/360/images/clouds3.png)
+		repeat top center;
+	z-index: 3;
+	filter: brightness(3.5);
+	mix-blend-mode: screen;
+	-moz-animation: move-clouds-back 200s linear infinite;
+	-ms-animation: move-clouds-back 200s linear infinite;
+	-o-animation: move-clouds-back 200s linear infinite;
+	-webkit-animation: move-clouds-back 200s linear infinite;
+	animation: move-clouds-back 200s linear infinite;
+}
+
+/* MEDIA QUERIES */
 @media (hover: none), (pointer: coarse) {
 	#rightcontrols {
 		position: fixed;
@@ -1528,11 +1864,11 @@
 	.comingsymbol {
 		margin-top: 0;
 		background: rgba(255, 255, 255, 0.2);
-		width: 5rem;
+		width: 5rem !important;
 		position: absolute;
 		left: 0.4rem;
-		top: 8.5rem;
-		padding: 0.3rem;
+		top: 8.5rem !important;
+		padding: 0.3rem !important;
 		font-size: 0.7rem;
 		z-index: 200;
 	}
@@ -1609,7 +1945,7 @@
 	}
 
 	.banner {
-		width: 90%;
+		width: calc(100% - 8rem);
 	}
 
 	#btn-mute,
@@ -1763,5 +2099,25 @@
 
 	.fulldown {
 		box-shadow: none !important;
+	}
+
+	#btn-like {
+		top: auto;
+		bottom: 3.4rem;
+		right: 0.4rem;
+		width: 2.5rem;
+	}
+	#btn-controls {
+		top: auto;
+		bottom: 8.8rem;
+		right: 0.4rem;
+		width: 2.5rem;
+	}
+	#btn-credits {
+		top: auto;
+		bottom: 12.2rem;
+		right: 0.4rem;
+		width: 2.5rem;
+		background-size: 1.5rem;
 	}
 }
